5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_1014.log
== TEST (2019-03-31 22:23:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = int(input("Qual o total de vendas? "))
lucro = vendas*30/100
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    totaldevendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:23:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = int(input("Qual o total de vendas? "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.177496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 4, in <module>
    totaldevendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:23:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas? "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.121581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro = vendas*30/100
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:24:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(int("Qual o total de vendas? "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.192054
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 4, in <module>
    totaldevendas = float(int("Qual o total de vendas? "))
ValueError: invalid literal for int() with base 10: 'Qual o total de vendas? '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:24:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas? "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.181943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro = vendas*30/100
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:25:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.170695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro = vendas*30/100
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:25:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas: "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.191147
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro = vendas*30/100
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:25:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("qual o total de vendas: "))
lucro = vendas*30/100
print(lucro)
-- EXECUTION TIME:
0.164178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro = vendas*30/100
NameError: name 'vendas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:25:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("qual o total de vendas: "))
lucro = totaldevendas*30/100
print(lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:26:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("qual o total de vendas: "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.187364
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:26:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = int(input("qual o total de vendas: "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.253419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 4, in <module>
    totaldevendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:26:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = int(input("qual o total de vendas: "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.137866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 4, in <module>
    totaldevendas = int(input())
ValueError: invalid literal for int() with base 10: '700.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:26:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas: "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.223216
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:26:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas "))
lucro = totaldevendas*30/100
print(lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:26:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.15503
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:27:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas? "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.201086
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:27:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas? "))
lucro = totaldevendas*30/100
print(lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:27:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas? "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.180361
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:01:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totaldevendas = float(input("Qual o total de vendas? "))
lucro = totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.102044
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
